--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -8,37 +8,37 @@ on:
 jobs:
   bazel:
     name: Bazel Buildifier
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - run: |
-          sudo python3 -m pip install -U numpy pip wheel setuptools requests
+          sudo python3 -m pip install -U numpy pip
           bazel run -s --verbose_failures --experimental_repo_remote_exec //tools/lint:lint -- bazel
       - uses: reviewdog/action-suggester@v1
   black:
     name: Python Black
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - run: |
-          sudo python3 -m pip install -U numpy pip wheel setuptools requests
+          sudo python3 -m pip install -U numpy pip
           bazel run -s --verbose_failures --experimental_repo_remote_exec //tools/lint:lint -- black
       - uses: reviewdog/action-suggester@v1
   clang:
     name: Clang Format
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - run: |
-          sudo python3 -m pip install -U numpy pip wheel setuptools requests
+          sudo python3 -m pip install -U numpy pip
           bazel run -s --verbose_failures --experimental_repo_remote_exec //tools/lint:lint -- clang
       - uses: reviewdog/action-suggester@v1
   pyupgrade:
     name: Python Pyupgrade
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - run: |
-          sudo python3 -m pip install -U numpy pip wheel setuptools requests
+          sudo python3 -m pip install -U numpy pip
           bazel run -s --verbose_failures --experimental_repo_remote_exec //tools/lint:lint -- pyupgrade
       - uses: reviewdog/action-suggester@v1
