Fix M1 build issue (#1827)

--- a/tensorflow_io/BUILD
+++ b/tensorflow_io/BUILD
@@ -8,12 +8,17 @@ load(
 cc_binary(
     name = "python/ops/libtensorflow_io.so",
     copts = tf_io_copts(),
+    linkopts = select({
+        "@bazel_tools//src/conditions:darwin": [
+            "-lresolv",
+        ],
+        "//conditions:default": [],
+    }),
     linkshared = 1,
     deps = [
         "//tensorflow_io/core:arrow_ops",
         "//tensorflow_io/core:bigquery_ops",
         "//tensorflow_io/core:bigtable_ops",
-        "//tensorflow_io/core:audio_video_ops",
         "//tensorflow_io/core:avro_ops",
         "//tensorflow_io/core:avro_atds",
         "//tensorflow_io/core:orc_ops",
@@ -42,7 +47,9 @@ cc_binary(
         "@local_config_tf//:tf_header_lib",
     ] + select({
         "@bazel_tools//src/conditions:windows": [],
+        "@bazel_tools//src/conditions:darwin_arm64": [],
         "//conditions:default": [
+            "//tensorflow_io/core:audio_video_ops",
             "//tensorflow_io/core:core_ops",
             "//tensorflow_io/core:elasticsearch_ops",
             "//tensorflow_io/core:optimization",
