--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,10 +117,10 @@ jobs:
       - name: Bazel on macOS
         run: |
           set -x -e
-          export BAZEL_OPTIMIZATION="--config=optimization --config=cache"
-          if [[ "${EVENT_NAME}" == "push" && "${REPO_NAME}" == "tensorflow/io" ]]; then
-            export BAZEL_OPTIMIZATION="$BAZEL_OPTIMIZATION --remote_upload_local_results=true --google_credentials=service_account_creds.json"
-          fi
+          # export BAZEL_OPTIMIZATION="--config=optimization --config=cache"
+          # if [[ "${EVENT_NAME}" == "push" && "${REPO_NAME}" == "tensorflow/io" ]]; then
+          #   export BAZEL_OPTIMIZATION="$BAZEL_OPTIMIZATION --remote_upload_local_results=true --google_credentials=service_account_creds.json"
+          # fi
           bash -e .github/workflows/build.bazel.sh python3
       - uses: actions/upload-artifact@v2
         with:
