--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,6 +129,46 @@ jobs:
             build/tensorflow_io
             build/tensorflow_io_gcs_filesystem
 
+  macos-arm64-wheel:
+    name: Wheel ${{ matrix.python }} macOS arm64
+    needs: macos-arm64-bazel
+    runs-on: [self-hosted, macOS, ARM64]
+    strategy:
+      matrix:
+        python: ['3.11']
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v1
+        with:
+          name: ${{ runner.os }}-arm64-bazel-bin
+          path: bazel-bin
+      - name: Wheel ${{ matrix.python }} macOS
+        run: |
+          set -x -e
+          which python
+          python -m pip install -U wheel setuptools
+          python --version
+          python setup.py --data bazel-bin -q bdist_wheel --plat-name macosx_10_14_arm64
+          rm -rf build
+          python setup.py --project tensorflow-io-gcs-filesystem --data bazel-bin -q bdist_wheel --plat-name macosx_10_14_arm64
+      - name: Auditwheel ${{ matrix.python }} macOS
+        run: |
+          set -x -e
+          python -m pip install twine delocate==0.10.3
+          delocate-wheel --version
+          ls dist/*
+          mkdir -p wheelhouse
+          for f in dist/*.whl; do
+            echo "disable delocate due to build breaks: delocate-wheel -w wheelhouse  $f"
+            cp $f wheelhouse
+          done
+          ls wheelhouse/*
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ runner.os }}-arm64-${{ matrix.python }}-wheel
+          path: wheelhouse
+
+
   macos-bazel:
     name: Bazel macOS
     runs-on: macOS-11
