Use pyenv local (#1847)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -148,7 +148,7 @@ jobs:
           pyenv versions
           pyenv install --list
           pyenv install ${{ matrix.python }}
-          pyenv shell ${{ matrix.python }}
+          pyenv local ${{ matrix.python }}
           pyenv versions
           pyenv version
           pyenv which python
