Hash pin workflows and enable dependabot (#1863)
* hash pin release.yml

Signed-off-by: Joyce <joycebrum@google.com>

* hash pin reviewdog.yml

Signed-off-by: Joyce <joycebrum@google.com>

* hash pin release.note.yml

Signed-off-by: Joyce <joycebrum@google.com>

* hash pin benchmarks.yml

Signed-off-by: Joyce <joycebrum@google.com>

* hash pin api.yml

Signed-off-by: Joyce <joycebrum@google.com>

* hash pin build.yml part 1

Signed-off-by: Joyce <joycebrum@google.com>

* hash pin build.yml part 2

Signed-off-by: Joyce <joycebrum@google.com>

* Create dependabot.yml

Signed-off-by: Joyce <joycebrum@google.com>

* Bump the github-actions group with 4 updates

Bumps the github-actions group with 4 updates: [actions/checkout](https://github.com/actions/checkout), [actions/setup-python](https://github.com/actions/setup-python), [actions/setup-node](https://github.com/actions/setup-node) and [peter-evans/create-pull-request](https://github.com/peter-evans/create-pull-request).


Updates `actions/checkout` from 2.7.0 to 4.1.0
- [Release notes](https://github.com/actions/checkout/releases)
- [Changelog](https://github.com/actions/checkout/blob/main/CHANGELOG.md)
- [Commits](https://github.com/actions/checkout/compare/ee0669bd1cc54295c223e0bb666b733df41de1c5...8ade135a41bc03ea155e62e844d188df1ea18608)

Updates `actions/setup-python` from 1.2.4 to 4.7.0
- [Release notes](https://github.com/actions/setup-python/releases)
- [Commits](https://github.com/actions/setup-python/compare/v1.2.4...61a6322f88396a6271a6ee3565807d608ecaddd1)

Updates `actions/setup-node` from 1.4.6 to 3.8.1
- [Release notes](https://github.com/actions/setup-node/releases)
- [Commits](https://github.com/actions/setup-node/compare/v1.4.6...5e21ff4d9bc1a8cf6de233a3057d20ec6b3fb69d)

Updates `peter-evans/create-pull-request` from 3.14.0 to 5.0.2
- [Release notes](https://github.com/peter-evans/create-pull-request/releases)
- [Commits](https://github.com/pete

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -22,8 +22,8 @@ jobs:
         python: ['3.8']
         version: ['tensorflow:tensorflow-io-nightly', 'tf-nightly:tensorflow-io', 'tf-nightly:tensorflow-io-nightly']
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+      - uses: actions/setup-python@61a6322f88396a6271a6ee3565807d608ecaddd1 # v4.7.0
         with:
           python-version: ${{ matrix.python }}
       - run: |
@@ -65,8 +65,8 @@ jobs:
         python: ['3.8']
         version: ['tensorflow:tensorflow-io-nightly', 'tf-nightly:tensorflow-io', 'tf-nightly:tensorflow-io-nightly']
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+      - uses: actions/setup-python@61a6322f88396a6271a6ee3565807d608ecaddd1 # v4.7.0
         with:
           python-version: ${{ matrix.python }}
       - name: Setup Linux
@@ -120,11 +120,11 @@ jobs:
         python: ['3.8']
         version: ['tensorflow:tensorflow-io-nightly', 'tf-nightly:tensorflow-io', 'tf-nightly:tensorflow-io-nightly']
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+      - uses: actions/setup-python@61a6322f88396a6271a6ee3565807d608ecaddd1 # v4.7.0
         with:
           python-version: ${{ matrix.python }}
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@5e21ff4d9bc1a8cf6de233a3057d20ec6b3fb69d # v3.8.1
         with:
           node-version: '8.x'
       - name: Setup Windows
