--- a/.github/workflows/release.note.yml
+++ b/.github/workflows/release.note.yml
@@ -16,7 +16,7 @@ jobs:
     name: README.md
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
         with:
           fetch-depth: 0
       - run: git tag
@@ -24,7 +24,7 @@ jobs:
       - run: git diff
       - run: python3 tools/release/note_update.py
       - run: git diff
-      - uses: peter-evans/create-pull-request@v3
+      - uses: peter-evans/create-pull-request@153407881ec5c347639a548ade7d8ad1d6740e38 # v5.0.2
         with:
           commit-message: Update RELEASE.md [bot]
           branch: bot-RELEASE.md
