--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
         with:
           fetch-depth: 0
       - run: |
@@ -63,19 +63,19 @@ jobs:
           echo ${{ steps.info.outputs.name }}
           echo ${{ steps.info.outputs.commit }}
           cat CURRENT.md
-      - uses: softprops/action-gh-release@v1
+      - uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v1
         with:
           body_path: CURRENT.md
           name: ${{ steps.info.outputs.name }}
           tag_name: ${{ steps.info.outputs.tag }}
           target_commitish: ${{ steps.info.outputs.commit }}
           draft: true
-      - uses: pypa/gh-action-pypi-publish@master
+      - uses: pypa/gh-action-pypi-publish@c5d8ac5008d27a4272a68c6b8cd8ba14cc4dcd49 # master
         with:
           user: __token__
           password: ${{ secrets.TEST_PYPI_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
-      #- uses: pypa/gh-action-pypi-publish@master
+      #- uses: pypa/gh-action-pypi-publish@c5d8ac5008d27a4272a68c6b8cd8ba14cc4dcd49 # master
       #  with:
       #    user: __token__
       #    password: ${{ secrets.PYPI_TOKEN }}
